# ocarina

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  stats_line_num.py
src/GUI/: CMakeLists.txt  decl.h  widget_context.h  widgets.cpp  widgets.h  window.cpp  window.h
src/GUI_impl/: CMakeLists.txt
src/GUI_impl/imGui/: CMakeLists.txt  gl.h  gl_helper.h  glfw_window.cpp  glfw_window.h  sdl_window.cpp  sdl_window.h  widgets.cpp  widgets.h  window.cpp  window.h  window_creator.cpp
src/ast/: CMakeLists.txt  ast_node.h  expression.cpp  expression.h  function.cpp  function.h  function_builder.cpp  function_builder.h  function_corrector.cpp  function_corrector.h  function_impl.h  op.cpp  op.h  statement.cpp  statement.h  statement_builder.cpp  statement_builder.h  symbol_name.h  type.cpp  type.h  type_desc.h  type_register.cpp  type_registry.cpp  type_registry.h  usage.h  variable.cpp  variable.h
src/backends/: CMakeLists.txt
src/backends/cuda/: CMakeLists.txt  cuda_accel.cpp  cuda_accel.h  cuda_bindless_array.cpp  cuda_bindless_array.h  cuda_builtin.h  cuda_builtin_embed.h  cuda_codegen.cpp  cuda_codegen.h  cuda_commad_visitor.h  cuda_command_visitor.cpp  cuda_command_visitor.h  cuda_compiler.cpp  cuda_compiler.h  cuda_device.cpp  cuda_device.h  cuda_device_builtin.h  cuda_device_math_embed.h  cuda_device_resource.h  cuda_device_resource_embed.h  cuda_image.cpp  cuda_image.h  cuda_math.h  cuda_math_embed.h  cuda_math_lib.h  cuda_math_lib_embed.h  cuda_mesh.cpp  cuda_mesh.h  cuda_resource_array.cpp  cuda_resource_array.h  cuda_shader.cpp  cuda_shader.h  cuda_stream.cpp  cuda_stream.h  cuda_texture.cpp  cuda_texture.h  generate_cuda_math_lib.py  gl_interop.h  optix_accel.cpp  optix_accel.h  (+1 more)
src/backends/vulkan/: CMakeLists.txt  dxc_compiler.cpp  dxc_compiler.h  shader_reflection.cpp  shader_reflection.h  util.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_descriptorset.cpp  vulkan_descriptorset.h  vulkan_descriptorset_writer.cpp  vulkan_descriptorset_writer.h  vulkan_device.cpp  vulkan_device.h  vulkan_driver.cpp  vulkan_driver.h  vulkan_index_buffer.cpp  vulkan_index_buffer.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_rendertarget.cpp  vulkan_rendertarget.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_vertex_buffer.cpp  vulkan_vertex_buffer.h
src/compile/: CMakeLists.txt  codegen.cpp  codegen.h  cpp_codegen.cpp  cpp_codegen.h
src/core/: CMakeLists.txt  basic_trait.h  basic_traits.h  basic_type.h  basic_types.h  concepts.h  constants.h  dynamic_module.cpp  dynamic_module.h  element_trait.h  hash.cpp  hash.h  header.h  image.h  image_base.h  logging.cpp  logging.h  macro_map.h  oc_windows.h  platform.cpp  platform.h  pool.h  singleton.h  stl.cpp  stl.h  string_util.h  swizzle_4.inl.h  thread_pool.cpp  thread_pool.h  thread_safety.h  util.h  window.cpp  window.h
src/core/swizzle_inl/: generate_swizzles.py  swizzle2.inl.h  swizzle3.inl.h  (+4 more)
src/dsl/: CMakeLists.txt  arg.h  array.h  builtin.h  common.h  computable.h  computable.inl  debugger.cpp  debugger.h  dsl.cpp  dsl.h  dynamic_array.h  encodable.h  encode.h  env.cpp  env.h  expr.h  expr_base.h  expr_traits.h  func.cpp  func.h  func_traits.h  generate_swizzle.py  list.h  managed_wrapper.h  operators.cpp  operators.h  polymorphic.h  printer.cpp  printer.h  ref.h  ref.inl  ref_func.h  registrable.h  registrable_managed.h  rtx_type.h  serialize.h  shared_data.h  soa.h  stack.h  (+12 more)
src/ext/: CMakeLists.txt  empty.cpp
src/framework/: CMakeLists.txt  camera.cpp  camera.h  material.cpp  material.h  math.h  primitive.cpp  primitive.h  renderer.cpp  renderer.h
src/generator/: CMakeLists.txt  codegen.cpp  codegen.h  cpp_codegen.cpp  cpp_codegen.h
src/gui/: CMakeLists.txt  window.cpp  window.h
src/math/: CMakeLists.txt  base.cpp  base.h  basic_traits.h  basic_types.h  box.h  common_lib.h  common_lib.inl.h  constants.h  frame.h  geometry.h  interval.h  math.cpp  math.h  math_lib_template.py  matrix_types.h  optics.h  prims.h  quaternion.h  rt.h  sampling.h  scalar_func.h  transform.h  vector_types.h
src/pyexporter/: ocapi.cpp  ocapi.h
src/python/: CMakeLists.txt  common.h  export_matrix.cpp  export_vector.h  export_vector2.cpp  export_vector3.cpp  export_vector4.cpp  export_vector_func.h  export_vector_op.h  exporter.h  ocapi.cpp  ocapi.h  ocarina_api.cpp
src/rhi/: CMakeLists.txt  accel.h  buffer.h  command.cpp  command.h  command_queue.cpp  command_queue.h  common.h  context.cpp  context.h  context_impl.h  descriptor_set.h  device.cpp  device.h  dynamic_module.cpp  dynamic_module.h  file_manager.cpp  file_manager.h  frame_data.h  graphics_descriptions.h  index_buffer.cpp  index_buffer.h  managed.h  params.h  pipeline_state.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  rendertarget.h  resource.cpp  resource.h  shader.h  stats.cpp  stats.h  stream.cpp  stream.h  texture.cpp  texture.h  vertex_buffer.cpp  (+3 more)
src/rt/: CMakeLists.txt  hit.cpp  hit.h
src/runtime/: CMakeLists.txt  buffer.cpp  buffer.h  commad.h  command.cpp  command.h  command_queue.cpp  command_queue.h  common.h  context.cpp  context.h  context_impl.h  device.cpp  device.h  dynamic_module.cpp  dynamic_module.h  resource.cpp  resource.h  shader.cpp  shader.h  stream.cpp  stream.h  texture.cpp  texture.h
src/tests/: CMakeLists.txt  cornell_box.h  test_accel.cpp  test_callable.cpp  test_doc.cpp  test_expr.cpp  test_gui.cpp  test_image_io.cpp  test_kernel.cpp  test_list.cpp  test_parse_type.cpp  test_pt.cpp  test_pybind.cpp  test_raygenkernel.cpp  test_read_buffer.cpp  test_trait.cpp  test_vector.cpp  test_vulkan_texture.cpp  test_vulkan_triangle.cpp
src/util/: CMakeLists.txt  context.cpp  context.h  context_impl.h  file_manager.cpp  file_manager.h  file_manager_impl.h  image.cpp  image.h  image_base.cpp  image_base.h  image_io.cpp  image_io.h
src/windows/: CMakeLists.txt  gl.cpp  gl.h  window.cpp  window.h
(+126 files in other folders)
