
add_library(ocarina-ext SHARED empty.cpp)
set_target_properties(ocarina-ext PROPERTIES
        PUBLIC_HEADER "${HEADER_FILES}"
        LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
        WINDOWS_EXPORT_ALL_SYMBOLS ON)

add_library(xxhash INTERFACE)
target_include_directories(xxhash INTERFACE xxHash)
target_compile_definitions(xxhash INTERFACE XXH_INLINE_ALL)
set_target_properties(xxhash PROPERTIES
        UNITY_BUILD OFF)

set(FMT_OS OFF CACHE BOOL "" FORCE)
add_subdirectory(fmt)
target_compile_definitions(fmt-header-only INTERFACE
        FMT_CONSTEVAL=constexpr
        FMT_EXCEPTIONS=0
        FMT_HEADER_ONLY=1
        FMT_USE_NOEXCEPT=1)
target_include_directories(fmt-header-only INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/fmt/include)

target_link_libraries(ocarina-ext PUBLIC fmt::fmt-header-only)

add_subdirectory(EASTL)
target_include_directories(EASTL PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/EASTL/include)
target_link_libraries(ocarina-ext PUBLIC EASTL)


add_subdirectory(tinyexr)

add_subdirectory(spdlog)
set_target_properties(spdlog PROPERTIES
        UNITY_BUILD FALSE)
target_link_libraries(spdlog PUBLIC fmt::fmt-header-only)
target_link_libraries(ocarina-ext PUBLIC spdlog)

add_subdirectory(glfw)
add_subdirectory(imgui)
add_library(glfw_config INTERFACE)
target_link_libraries(glfw_config INTERFACE glfw)

add_subdirectory(stblib)

add_library(ocarina-gui-ext INTERFACE)
target_link_libraries(ocarina-gui-ext INTERFACE glfw_config ocarina-imgui)

cmake_policy(SET CMP0148 NEW)

if (${OCARINA_PY})
    add_subdirectory(pybind11)
    find_package(Python REQUIRED COMPONENTS Interpreter Development)
    include_directories(${PYTHON_INCLUDE_DIRS})
    link_directories(${PYTHON_LIBRARIES})
    target_include_directories(ocarina-ext INTERFACE
            ${CMAKE_CURRENT_SOURCE_DIR}/pybind11/include/pybind11
            ${CMAKE_CURRENT_SOURCE_DIR}/pybind11/include
            ${PYTHON_INCLUDE_DIRS})
endif ()


target_link_libraries(ocarina-ext
        PUBLIC
        ocarina-gui-ext
        ocarina-ext-stb
        ${PYTHON_LIBRARIES}
        xxhash
        spdlog
        ocarina-ext-tinyexr)